# jojo-api

./: .gitignore  README.md  alembic.ini  pyproject.toml  run.py
app/: main.py
app/characters/: crud.py  model.py  router.py  schemas.py
app/core/: config.py
app/db/: config.py  repository.py
app/db/migrations/: env.py
app/images/: model.py  schemas.py
app/parts/: crud.py  model.py  router.py  schemas.py
app/shared/: schemas.py
app/stands/: crud.py  model.py  models.py  router.py  schemas.py
app/utils/: constants.py  example_response.py
