[tool.poetry]
name = "jojo-api"
version = "0.1.0"
description = ""
authors = ["axelolea <axelcedilloolea@gmail.com>"]
readme = "README.md"
packages = [{include = "jojo_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
sqlalchemy = "^2.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
